@@ -1,16 +1,0 @@
-#
-
-comment "Ccache Options"
-
-config BR2_CCACHE
-	bool "Enable ccache support?"
-	help
-	    Enable ccache support?
-
-config BR2_CCACHE_DIR
-	string "ccache dir location?"
-	depends on BR2_CCACHE
-	default "$(TOOLCHAIN_DIR)/ccache-$(CCACHE_VER)/cache"
-	help
-	    Where ccache should store cached files.
-
